Use correct request bodies in productizer endpoints
