# src/PrhApi.Models.CodeGen/Model/EstablishmentRequest.cs
@@ -1,0 +1,129 @@
+/*
+ * PRH mock API
+ *
+ * API definition for PRH mock API
+ *
+ * The version of the OpenAPI document: 1.0
+ * Contact: lassi.patanen@gofore.com
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ */
+
+
+using System;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.Linq;
+using System.IO;
+using System.Runtime.Serialization;
+using System.Text;
+using System.Text.RegularExpressions;
+using Newtonsoft.Json;
+using Newtonsoft.Json.Converters;
+using Newtonsoft.Json.Linq;
+using System.ComponentModel.DataAnnotations;
+using OpenAPIDateConverter = PrhApi.Models.CodeGen.Client.OpenAPIDateConverter;
+
+namespace PrhApi.Models.CodeGen.Model
+{
+    /// <summary>
+    /// EstablishmentRequest
+    /// </summary>
+    [DataContract(Name = "EstablishmentRequest")]
+    public partial class EstablishmentRequest : IEquatable<EstablishmentRequest>, IValidatableObject
+    {
+        /// <summary>
+        /// Initializes a new instance of the <see cref="EstablishmentRequest" /> class.
+        /// </summary>
+        /// <param name="nationalIdentifier">nationalIdentifier.</param>
+        public EstablishmentRequest(string nationalIdentifier = default(string))
+        {
+            this.NationalIdentifier = nationalIdentifier;
+        }
+
+        /// <summary>
+        /// Gets or Sets NationalIdentifier
+        /// </summary>
+        [DataMember(Name = "nationalIdentifier", EmitDefaultValue = false)]
+        public string NationalIdentifier { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            StringBuilder sb = new StringBuilder();
+            sb.Append("class EstablishmentRequest {\n");
+            sb.Append("  NationalIdentifier: ").Append(NationalIdentifier).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public virtual string ToJson()
+        {
+            return Newtonsoft.Json.JsonConvert.SerializeObject(this, Newtonsoft.Json.Formatting.Indented);
+        }
+
+        /// <summary>
+        /// Returns true if objects are equal
+        /// </summary>
+        /// <param name="input">Object to be compared</param>
+        /// <returns>Boolean</returns>
+        public override bool Equals(object input)
+        {
+            return this.Equals(input as EstablishmentRequest);
+        }
+
+        /// <summary>
+        /// Returns true if EstablishmentRequest instances are equal
+        /// </summary>
+        /// <param name="input">Instance of EstablishmentRequest to be compared</param>
+        /// <returns>Boolean</returns>
+        public bool Equals(EstablishmentRequest input)
+        {
+            if (input == null)
+            {
+                return false;
+            }
+            return 
+                (
+                    this.NationalIdentifier == input.NationalIdentifier ||
+                    (this.NationalIdentifier != null &&
+                    this.NationalIdentifier.Equals(input.NationalIdentifier))
+                );
+        }
+
+        /// <summary>
+        /// Gets the hash code
+        /// </summary>
+        /// <returns>Hash code</returns>
+        public override int GetHashCode()
+        {
+            unchecked // Overflow is fine, just wrap
+            {
+                int hashCode = 41;
+                if (this.NationalIdentifier != null)
+                {
+                    hashCode = (hashCode * 59) + this.NationalIdentifier.GetHashCode();
+                }
+                return hashCode;
+            }
+        }
+
+        /// <summary>
+        /// To validate all properties of the instance
+        /// </summary>
+        /// <param name="validationContext">Validation context</param>
+        /// <returns>Validation Result</returns>
+        public IEnumerable<System.ComponentModel.DataAnnotations.ValidationResult> Validate(ValidationContext validationContext)
+        {
+            yield break;
+        }
+    }
+
+}
